# loan_prediction

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  example.env  prefect.yaml  pyproject.toml
cap/: __init__.py  plots.py
cap/modeling/: predict.py  train.py
data/processed/: features.csv
deployment/: Dockerfile  lambda_function.py  model.py  readme.md  test-docker.py
deployment/web-service/: Dockerfile  model.pkl  predict.py  preprocessor.pkl
infrastructure/: .terraform.lock.hcl  main.tf  variables.tf
infrastructure/modules/ecr/: main.tf  variables.tf
infrastructure/modules/kinesis/: main.tf  variables.tf
infrastructure/modules/lambda/: iam.tf  main.tf  variables.tf
infrastructure/modules/s3/: main.tf
infrastructure/vars/: stg.tfvars
integration-test/: docker-compose.yaml  event.json  run.sh  test_docker.py  test_kinesis.py
integration-test/model/: MLmodel
lap/: __init__.py  config.py  dataset.py  features.py  main_flow.py  plots.py
lap/modeling/: hp_optim.py  model_selection.py  predict.py  train.py
models/: model.joblib  model.pkl  preprocessor.joblib
notebooks/: 01_eda.ipynb  02_view_encoders.ipynb  03_view_values.ipynb
scripts/: deploy-manual.sh  test-cloud-e2e.sh
tests/: model_test.py
