[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lap"
version = "0.0.1"
description = "End to end ML project about predicting loan approval."
authors = [
  { name = "Gustavo Hernández Angeles" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "numpy",
    "pandas",
    "pip",
    "scikit-learn==1.7.0",
    "typer",
    "mlflow",
    "boto3>=1.39.1",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["lap"]
include = ["pyproject.toml", "lap/**/*.py", "deployment/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["lap"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "prefect>=3.4.7",
    "pytest>=8.4.1",
    "xgboost>=3.0.2",
    "hyperopt>=0.2.7",
    "seaborn>=0.13.2",
    "tqdm",
    "ruff",
    "awscli",
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "notebook",
    "pytest",
    "python-dotenv",    
]

